--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winston Downs and Around</title>
+    <title>Around Winston Downs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Winston Downs and Around</h1>
+                <h1>Around Winston Downs</h1>
             </div>
             <nav>
                 <ul>
@@ -20,6 +20,13 @@
                     <li><a href="#parks" class="nav-link">Parks</a></li>
                     <li><a href="#running-trails" class="nav-link">Running Trails</a></li>
                     <li><a href="#youth-sports" class="nav-link">Youth Sports</a></li>
+                    <li><a href="https://github.com/jb08/winston-downs-and-around" target="_blank"
+                            rel="noopener noreferrer" class="nav-link github-link" title="View on GitHub">
+                            <svg width="24" height="24" viewBox="0 0 16 16" fill="currentColor">
+                                <path
+                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z" />
+                            </svg>
+                        </a></li>
                 </ul>
             </nav>
         </div>
@@ -28,7 +35,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Welcome to Our Neighborhood</h2>
-            <p>Discover the beauty and community of Winston Downs and Around</p>
+            <p>Discover the beauty and community of Winston Downs</p>
         </div>
     </section>
 
@@ -157,14 +164,6 @@
                         <li><a href="#youth-sports">Youth Sports</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h4>Contact</h4>
-                    <p>Email: info@winstondowns.com</p>
-                    <p>Phone: (555) 123-4567</p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Winston Downs and Around. All rights reserved.</p>
             </div>
         </div>
     </footer>
