photoswipe sizing not quite working

--- a/index.html
+++ b/index.html
@@ -45,52 +45,52 @@
         <section id="gallery" class="content-section">
             <h2>Photo Gallery</h2>
             <div class="gallery-grid" id="gallery-grid">
-                <a href="images/neighborhood.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/neighborhood.jpg" target="_blank">
                     <img src="images/neighborhood.jpg" alt="Winston Downs Neighborhood" />
                     <div class="gallery-caption">Neighborhood</div>
                 </a>
-                <a href="images/cherry_creek_mural_fox.jpg" data-pswp-width="3840" data-pswp-height="2160"
+                <a href="images/cherry_creek_mural_fox.jpg" data-pswp-width="1536" data-pswp-height="2048"
                     target="_blank">
                     <img src="images/cherry_creek_mural_fox.jpg" alt="Cherry Creek Mural - Fox" />
                     <div class="gallery-caption">Cherry Creek Mural - Fox</div>
                 </a>
-                <a href="images/cherry_creek_mural_geese.jpg" data-pswp-width="3840" data-pswp-height="2160"
+                <a href="images/cherry_creek_mural_geese.jpg" data-pswp-width="1536" data-pswp-height="2048"
                     target="_blank">
                     <img src="images/cherry_creek_mural_geese.jpg" alt="Cherry Creek Mural - Geese" />
                     <div class="gallery-caption">Cherry Creek Mural - Geese</div>
                 </a>
-                <a href="images/denver_green_school.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/denver_green_school.jpg" data-pswp-width="2048" data-pswp-height="1536" target="_blank">
                     <img src="images/denver_green_school.jpg" alt="Denver Green School" />
                     <div class="gallery-caption">Denver Green School</div>
                 </a>
-                <a href="images/library.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/library.jpg" data-pswp-width="1536" data-pswp-height="2048" target="_blank">
                     <img src="images/library.jpg" alt="Library" />
                     <div class="gallery-caption">Library</div>
                 </a>
-                <a href="images/youth_park.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/youth_park.jpg" data-pswp-width="2048" data-pswp-height="1536" target="_blank">
                     <img src="images/youth_park.jpg" alt="Youth Park" />
                     <div class="gallery-caption">Youth Park</div>
                 </a>
-                <a href="images/lowry_sports_complex.jpg" data-pswp-width="3840" data-pswp-height="2160"
+                <a href="images/lowry_sports_complex.jpg" data-pswp-width="2048" data-pswp-height="1536"
                     target="_blank">
                     <img src="images/lowry_sports_complex.jpg" alt="Lowry Sports Complex" />
                     <div class="gallery-caption">Lowry Sports Complex</div>
                 </a>
-                <a href="images/swim_dogs_george_washington_pool.jpg" data-pswp-width="3840" data-pswp-height="2160"
+                <a href="images/swim_dogs_george_washington_pool.jpg" data-pswp-width="1536" data-pswp-height="2048"
                     target="_blank">
                     <img src="images/swim_dogs_george_washington_pool.jpg" alt="Swim Dogs at George Washington Pool" />
                     <div class="gallery-caption">Swim Dogs - George Washington Pool</div>
                 </a>
-                <a href="images/gymnastics_plus.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/gymnastics_plus.jpg" data-pswp-width="2048" data-pswp-height="1536" target="_blank">
                     <img src="images/gymnastics_plus.jpg" alt="Gymnastics Plus" />
                     <div class="gallery-caption">Gymnastics Plus</div>
                 </a>
-                <a href="images/four_mile_park_concert.jpg" data-pswp-width="3840" data-pswp-height="2160"
+                <a href="images/four_mile_park_concert.jpg" data-pswp-width="2048" data-pswp-height="1536"
                     target="_blank">
                     <img src="images/four_mile_park_concert.jpg" alt="Four Mile Park Concert" />
                     <div class="gallery-caption">Four Mile Park Concert</div>
                 </a>
-                <a href="images/chicken_coops.jpg" data-pswp-width="3840" data-pswp-height="2160" target="_blank">
+                <a href="images/chicken_coops.jpg" data-pswp-width="1536" data-pswp-height="2048" target="_blank">
                     <img src="images/chicken_coops.jpg" alt="Chicken Coops" />
                     <div class="gallery-caption">Chicken Coops</div>
                 </a>
@@ -241,6 +241,7 @@
             bgOpacity: 0.9,
             padding: { top: 50, bottom: 50, left: 50, right: 50 },
         });
+
         lightbox.init();
     </script>
     <script src="script.js"></script>
