--- a/index.html
+++ b/index.html
@@ -37,10 +37,121 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Welcome to Our Neighborhood</h2>
-            <p>Discover the beauty and community of Winston Downs</p>
+            <p>Discover what our community has to offer in and around Winston Downs</p>
         </div>
     </section>
 
+
+
+    <section id="map" class="content-section">
+        <h2>Map</h2>
+        <div class="card">
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3070.7426891795584!2d-104.90682892346494!3d39.667843971543916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c7da5d11c9d9d%3A0x8c8e3b9e3c8e3b9e!2s6700%20E%20Virginia%20Ave%2C%20Denver%2C%20CO%2080224!5e0!3m2!1sen!2sus!4v1696435200000!5m2!1sen!2sus"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+            <div class="section-content">
+                <p>Explore our neighborhood and discover local amenities, parks, trails, and more. Our interactive
+                    map helps you navigate Winston Downs and the surrounding areas with ease.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="parks" class="content-section">
+        <h2>Parks</h2>
+        <div class="grid">
+            <div class="card">
+                <div class="locality-badge">0.7 mi</div>
+                <h3>Crestmoor Park</h3>
+                <p>One square mile city park with bike/pedestrian path, playground, tennis courts, open space.</p>
+            </div>
+            <div class="card">
+                <div class="card-icon">🏞️</div>
+                <h3>Riverside Park</h3>
+                <p>A scenic park along the water with walking paths, benches, and beautiful views throughout the
+                    seasons.</p>
+            </div>
+            <div class="card">
+                <div class="card-icon">🌸</div>
+                <h3>Garden Commons</h3>
+                <p>A peaceful retreat with native plants, butterfly gardens, and quiet seating areas for relaxation.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="running-trails" class="content-section">
+        <h2>Running Trails</h2>
+        <div class="grid">
+            <div class="card">
+                <div class="locality-badge distance">2.5 mi</div>
+                <h3>Winston Loop Trail</h3>
+                <p>A beginner-friendly loop through the neighborhood with minimal elevation. Perfect for morning
+                    jogs and family walks.</p>
+                <div class="trail-details">
+                    <span class="detail">Difficulty: Easy</span>
+                    <span class="detail">Surface: Paved</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="trail-badge distance">4.8 mi</div>
+                <h3>Riverside Path</h3>
+                <p>A scenic route following the water with gentle hills. Great views and shaded sections throughout.
+                </p>
+                <div class="trail-details">
+                    <span class="detail">Difficulty: Moderate</span>
+                    <span class="detail">Surface: Mixed</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="trail-badge distance">6.2 mi</div>
+                <h3>Woodland Challenge</h3>
+                <p>An advanced trail through wooded areas with varied terrain. Popular with experienced runners and
+                    trail enthusiasts.</p>
+                <div class="trail-details">
+                    <span class="detail">Difficulty: Hard</span>
+                    <span class="detail">Surface: Trail</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="youth-sports" class="content-section">
+        <h2>Youth Sports</h2>
+        <div class="grid">
+            <div class="card">
+                <div class="card-icon">⚽</div>
+                <h3>Soccer League</h3>
+                <p>Youth soccer programs for ages 5-14. Spring and fall seasons with experienced coaches and modern
+                    facilities.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="card">
+                <div class="card-icon">🏀</div>
+                <h3>Basketball Program</h3>
+                <p>Year-round basketball development for all skill levels. Indoor courts available for practice and
+                    games.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="card">
+                <div class="card-icon">⚾</div>
+                <h3>Baseball & Softball</h3>
+                <p>Little League affiliated programs with multiple age divisions. Summer camps and clinics also
+                    available.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="card">
+                <div class="card-icon">🏊</div>
+                <h3>Swim Team</h3>
+                <p>Competitive and recreational swim programs at our community pool. Lessons and team practice
+                    throughout the year.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </div>
+    </section>
     <main class="container">
         <section id="gallery" class="content-section">
             <h2>Photo Gallery</h2>
@@ -94,117 +205,6 @@
                     <img src="images/chicken_coops.jpg" alt="Chicken Coops" />
                     <div class="gallery-caption">Chicken Coops</div>
                 </a>
-            </div>
-        </section>
-
-        <section id="map" class="content-section">
-            <h2>Map</h2>
-            <div class="card">
-                <div class="map-container">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3070.7426891795584!2d-104.90682892346494!3d39.667843971543916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c7da5d11c9d9d%3A0x8c8e3b9e3c8e3b9e!2s6700%20E%20Virginia%20Ave%2C%20Denver%2C%20CO%2080224!5e0!3m2!1sen!2sus!4v1696435200000!5m2!1sen!2sus"
-                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                </div>
-                <div class="section-content">
-                    <p>Explore our neighborhood and discover local amenities, parks, trails, and more. Our interactive
-                        map helps you navigate Winston Downs and the surrounding areas with ease.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="parks" class="content-section">
-            <h2>Parks</h2>
-            <div class="grid">
-                <div class="card">
-                    <div class="card-icon">🌳</div>
-                    <h3>Central Park</h3>
-                    <p>Our main community park featuring playgrounds, picnic areas, and open green spaces perfect for
-                        family gatherings.</p>
-                </div>
-                <div class="card">
-                    <div class="card-icon">🏞️</div>
-                    <h3>Riverside Park</h3>
-                    <p>A scenic park along the water with walking paths, benches, and beautiful views throughout the
-                        seasons.</p>
-                </div>
-                <div class="card">
-                    <div class="card-icon">🌸</div>
-                    <h3>Garden Commons</h3>
-                    <p>A peaceful retreat with native plants, butterfly gardens, and quiet seating areas for relaxation.
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section id="running-trails" class="content-section">
-            <h2>Running Trails</h2>
-            <div class="grid">
-                <div class="card">
-                    <div class="trail-badge distance">2.5 mi</div>
-                    <h3>Winston Loop Trail</h3>
-                    <p>A beginner-friendly loop through the neighborhood with minimal elevation. Perfect for morning
-                        jogs and family walks.</p>
-                    <div class="trail-details">
-                        <span class="detail">Difficulty: Easy</span>
-                        <span class="detail">Surface: Paved</span>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="trail-badge distance">4.8 mi</div>
-                    <h3>Riverside Path</h3>
-                    <p>A scenic route following the water with gentle hills. Great views and shaded sections throughout.
-                    </p>
-                    <div class="trail-details">
-                        <span class="detail">Difficulty: Moderate</span>
-                        <span class="detail">Surface: Mixed</span>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="trail-badge distance">6.2 mi</div>
-                    <h3>Woodland Challenge</h3>
-                    <p>An advanced trail through wooded areas with varied terrain. Popular with experienced runners and
-                        trail enthusiasts.</p>
-                    <div class="trail-details">
-                        <span class="detail">Difficulty: Hard</span>
-                        <span class="detail">Surface: Trail</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="youth-sports" class="content-section">
-            <h2>Youth Sports</h2>
-            <div class="grid">
-                <div class="card">
-                    <div class="card-icon">⚽</div>
-                    <h3>Soccer League</h3>
-                    <p>Youth soccer programs for ages 5-14. Spring and fall seasons with experienced coaches and modern
-                        facilities.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="card">
-                    <div class="card-icon">🏀</div>
-                    <h3>Basketball Program</h3>
-                    <p>Year-round basketball development for all skill levels. Indoor courts available for practice and
-                        games.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="card">
-                    <div class="card-icon">⚾</div>
-                    <h3>Baseball & Softball</h3>
-                    <p>Little League affiliated programs with multiple age divisions. Summer camps and clinics also
-                        available.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="card">
-                    <div class="card-icon">🏊</div>
-                    <h3>Swim Team</h3>
-                    <p>Competitive and recreational swim programs at our community pool. Lessons and team practice
-                        throughout the year.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
             </div>
         </section>
     </main>
